<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">"Aurora Store"</string>
    <string name="download_speed_bytes" translatable="false">%1$d B/s</string>
    <string name="download_speed_kb" translatable="false">%1$s KB/s</string>
    <string name="download_speed_mb" translatable="false">%1$s MB/s</string>
    <string name="about_wiki_title">Wiki</string>
    <string name="about_wiki_summary">Find answers to frequently asked questions (F.A.Q.), troubleshooting steps and more</string>
    <string name="about_bhim">"BHIM - UPI"</string>
    <string name="about_bhim_summary">"Donate via UPI"</string>
    <string name="about_bitcoin_bch">"Bitcoin Cash"</string>
    <string name="about_bitcoin_bch_summary">"Donate via Bitcoin Cash (BCH)"</string>
    <string name="about_bitcoin_btc">"Bitcoin"</string>
    <string name="about_bitcoin_btc_summary">"Donate via Bitcoin (BTC)"</string>
    <string name="about_bitcoin_eth">"Ethereum"</string>
    <string name="about_bitcoin_eth_summary">"Donate via Ethereum (ETH)"</string>
    <string name="about_fdroid">"F-Droid"</string>
    <string name="about_fdroid_summary">"Get the Aurora Store via F-Droid."</string>
    <string name="about_gitlab">"GitLab"</string>
    <string name="about_gitlab_summary">"Get the Aurora Store source code from Aurora OSS on GitLab."</string>
    <string name="about_libera">"Liberapay"</string>
    <string name="about_libera_summary">"Become a patron on Liberapay"</string>
    <string name="about_paypal">PayPal</string>
    <string name="about_paypal_summary">"Donate via PayPal"</string>
    <string name="about_telegram">"Telegram"</string>
    <string name="about_telegram_summary">"Join the Aurora Support group for discussions or suggestions."</string>
    <string name="about_xda">"XDA Forums"</string>
    <string name="about_xda_summary">"See the Aurora Store XDA thread for discussions or suggestions."</string>
    <string name="account_anonymous">"Anonymous"</string>
    <string name="account_google">"Google"</string>
    <string name="account_login_using">Log in using</string>
    <string name="account_logout">Log out from Aurora</string>
    <string name="account_set_default">Set as default</string>
    <string name="account_default">Default</string>
    <string name="account_remove">Remove</string>
    <string name="account_remove_title">Remove account?</string>
    <string name="account_remove_message">Remove %1$s from Aurora Store?</string>
    <string name="account_remove_last_message">This is your only account. Removing it will log you out, and you won\'t be able to use Aurora Store until you sign in again.</string>
    <string name="account_add">Add account</string>
    <string name="account_add_device">Device accounts</string>
    <string name="account_add_google">Sign in with Google</string>
    <string name="account_add_anonymous">Add anonymous account</string>
    <string name="account_set_default_title">Switch default account?</string>
    <string name="account_set_default_message">Aurora Store will restart to use the new default account.</string>
    <string name="account_switching">Switching account…</string>
    <string name="account_adding">Adding account…</string>
    <string name="account_refresh_all">Refresh all accounts</string>
    <string name="account_refreshing">Refreshing accounts…</string>
    <string name="account_refresh_done">All accounts refreshed</string>
    <string name="account_switch_failed">Couldn\'t refresh that account, so the default wasn\'t changed.</string>
    <string name="account_add_failed">Couldn\'t add that account. Please try again.</string>
    <string name="account_exists">Account already added</string>
    <string name="action_back">"Back"</string>
    <string name="action_blacklist">"Blacklist"</string>
    <string name="action_blacklist_add">"Add to blacklist"</string>
    <string name="action_buy">"Buy @ %1$s"</string>
    <string name="action_cancel">"Cancel"</string>
    <string name="action_clear">"Clear"</string>
    <string name="action_close">"Close"</string>
    <string name="action_copy">"Copy"</string>
    <string name="action_copy_link">"Copy link"</string>
    <string name="action_disable">"Disable"</string>
    <string name="action_export">"Export"</string>
    <string name="action_import">"Import"</string>
    <string name="action_favourite">"Favourite"</string>
    <string name="action_remove_favourite">"Remove from favourites"</string>
    <string name="action_filter">"Filters"</string>
    <string name="action_filter_all">"All"</string>
    <string name="action_filter_apply">"Apply"</string>
    <string name="action_filter_apps_with_ads">"Apps with ads"</string>
    <string name="action_filter_downloads">"Downloads"</string>
    <string name="action_filter_gsf_dependent_apps">"GSF dependent"</string>
    <string name="action_filter_misc">"Misc"</string>
    <string name="action_filter_paid_apps">"Paid"</string>
    <string name="action_filter_rating">"Ratings"</string>
    <string name="action_finish">"Finish"</string>
    <string name="action_get_local_apk">"Save app bundle"</string>
    <string name="action_grant">"Grant"</string>
    <string name="action_granted">"Granted"</string>
    <string name="action_ignore">"Ignore"</string>
    <string name="action_install">"Install"</string>
    <string name="action_install_all">"Install all"</string>
    <string name="action_install_microG">"Install microG Bundle"</string>
    <string name="action_switch_account">Switch account</string>
    <string name="action_installations">"Installations"</string>
    <string name="action_installing">"Installing"</string>
    <string name="action_join">"Join"</string>
    <string name="action_later">"Later"</string>
    <string name="action_leave">"Leave"</string>
    <string name="action_logout">Log out</string>
    <string name="action_next">"Next"</string>
    <string name="action_ok">"Okay"</string>
    <string name="action_open">"Open"</string>
    <string name="action_pending">"Pending"</string>
    <string name="action_post">"Post"</string>
    <string name="action_remove_all">"Remove all"</string>
    <string name="action_request_analysis">Request new analysis</string>
    <string name="action_restart">"Restart"</string>
    <string name="action_resume">"Resume"</string>
    <string name="action_retry">"Retry"</string>
    <string name="action_search">"Search"</string>
    <string name="action_select_all">"Select all"</string>
    <string name="action_share">"Share"</string>
    <string name="action_uninstall">"Uninstall"</string>
    <string name="action_uninstall_success">"Successfully uninstalled"</string>
    <string name="action_free_up_space">Free up space</string>
    <string name="action_home_screen">Add to home screen</string>
    <string name="action_info">"App info"</string>
    <string name="action_update">"Update"</string>
    <string name="action_update_all">"Update all"</string>
    <string name="action_update_anyway">Update anyway</string>
    <string name="action_view_on_play">"View on Play Store"</string>
    <string name="action_whitelist">"Whitelist"</string>
    <string name="details_beta">"Beta program"</string>
    <string name="details_beta_subscribed">"You're a beta tester"</string>
    <string name="details_beta_available">"Join beta program?"</string>
    <string name="details_beta_description">"You will see new features and bugs before the public does. Give your feedback to developers to help them improve."</string>
    <string name="details_beta_delay">"Enrollment may take some time, you can check status later."</string>
    <string name="details_changelog">"Changelog"</string>
    <string name="details_changelog_unavailable">"Changelog not provided"</string>
    <string name="details_contains_ads">"Contains ads"</string>
    <string name="details_dependencies">"Dependencies"</string>
    <string name="details_description">"Description"</string>
    <string name="details_dev_address">"Address"</string>
    <string name="details_dev_details">"Developer contact"</string>
    <string name="details_dev_email">"Email"</string>
    <string name="details_dev_profile">"Developer profile"</string>
    <string name="details_dev_website">"Website"</string>
    <string name="details_free">"Free"</string>
    <string name="details_gsf_dependent">"Requires GSF"</string>
    <string name="details_more_about_app">"More about app"</string>
    <string name="details_no_ads">"No ads"</string>
    <string name="details_no_app_match">"No app match found"</string>
    <string name="details_no_favourites">"No favourite apps found"</string>
    <string name="details_no_dependencies">"No dependencies"</string>
    <string name="details_no_permission">"No permissions"</string>
    <string name="details_no_updates">"No updates available"</string>
    <string name="details_paid">"Paid"</string>
    <string name="details_permission">"Permission"</string>
    <string name="details_data_safety_collect">Data that this app may collect</string>
    <string name="details_data_safety_collect_none">The developer says this app doesn\'t collect user data.</string>
    <string name="details_data_safety_shared">Data that this app may share</string>
    <string name="download_cancel_all">"Cancel all"</string>
    <string name="download_clear_finished">Clear finished</string>
    <string name="download_force_clear_all">"Force clear all"</string>
    <string name="filter_review_all">"All"</string>
    <string name="filter_latest">"Latest"</string>
    <string name="filter_review_critical">"Critical"</string>
    <string name="filter_review_five">"Five"</string>
    <string name="filter_review_four">"Four"</string>
    <string name="filter_review_one">"One"</string>
    <string name="filter_review_positive">"Positive"</string>
    <string name="filter_review_three">"Three"</string>
    <string name="filter_review_two">"Two"</string>
    <string name="menu_disclaimer">"Disclaimer"</string>
    <string name="menu_license">"License"</string>
    <string name="menu_terms">"Terms of service"</string>
    <string name="pref_network_title">"Networking"</string>
    <string name="pref_ui_title">"Customization"</string>
    <string name="title_about">About</string>
    <string name="title_account_manager">"Accounts"</string>
    <string name="title_apps">"Apps"</string>
    <string name="title_app_settings">"App settings"</string>
    <string name="title_apps_games">"My apps &amp; games"</string>
    <string name="title_blacklist_manager">"Blacklist manager"</string>
    <string name="title_download_manager">"Downloads"</string>
    <string name="title_download_playstore">"Play Store"</string>
    <string name="title_games">"Games"</string>
    <string name="title_installation">"Installation"</string>
    <string name="title_settings">"Settings"</string>
    <string name="title_spoof_manager">"Spoof manager"</string>
    <string name="title_search_suggestion">"Search suggestion"</string>
    <string name="title_search_results">"Search results"</string>
    <string name="title_updates">"Updates"</string>
    <string name="title_manual_download">"Manual download"</string>
    <string name="onboarding_title_permissions">"Permissions"</string>
    <string name="plexus_powered">Powered by Plexus</string>
    <string name="plexus_progress">Checking compatibility…</string>
    <string name="details_compatibility_title">Compatibility</string>
    <string name="details_compatibility_gms_required_title">Requires Google Play Services</string>
    <string name="details_compatibility_gms_required_subtitle">You may need to install Google’s proprietary library or a FOSS reimplementation such as microG.</string>
    <string name="details_compatibility_microg">With microG Project</string>
    <string name="details_compatibility_no_gms">Without Google Play Services</string>
</resources>