<?xml version="1.0" encoding="utf-8"?><!--
  ~ Aurora Store
  ~  Copyright (C) 2021, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~  Aurora Store is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Aurora Store is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favorite_unchecked"
        android:title="@string/action_favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_uninstall"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_uninstall"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_download_manual"
        android:title="@string/title_manual_download" />

    <item
        android:id="@+id/menu_download_manager"
        android:title="@string/title_download_manager" />

    <item
        android:id="@+id/menu_app_settings"
        android:title="@string/title_app_settings" />

    <item
        android:id="@+id/action_playstore"
        android:title="@string/title_download_playstore" />

    <item
        android:id="@+id/action_home_screen"
        android:title="@string/action_home_screen"
        android:visible="false" />
</menu>
