<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy" />
    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_download_pause"
        android:title="@string/action_pause" />
    <item
        android:id="@+id/action_resume"
        android:icon="@drawable/ic_download_resume"
        android:title="@string/action_resume" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_download_cancel"
        android:title="@string/action_cancel" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_download_clear"
        android:title="@string/action_clear" />
</menu>