<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_small"
    android:paddingEnd="@dimen/padding_small"
    android:showDividers="middle">

    <com.aurora.store.view.custom.layouts.ActionHeaderLayout
        android:id="@+id/header_compatibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerSubtitle="@string/plexus_powered"
        app:headerTitle="@string/details_compatibility_title" />

    <com.aurora.store.view.custom.layouts.DevInfoLayout
        android:id="@+id/txt_gms_dependency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:imgIcon="@drawable/ic_menu_about"
        tools:txtSubtitle="@string/details_compatibility_gms_required_subtitle"
        tools:txtTitle="@string/details_compatibility_gms_required_title" />

    <LinearLayout
        android:id="@+id/compatibility_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.aurora.store.view.custom.layouts.DevInfoLayout
            android:id="@+id/txt_status_aosp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:imgIcon="@drawable/ic_android"
            app:txtSubtitle="@string/plexus_progress"
            app:txtTitle="@string/details_compatibility_no_gms" />

        <com.aurora.store.view.custom.layouts.DevInfoLayout
            android:id="@+id/txt_status_microG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:imgIcon="@drawable/ic_android"
            app:txtSubtitle="@string/plexus_progress"
            app:txtTitle="@string/details_compatibility_microg" />
    </LinearLayout>
</LinearLayout>
