<?xml version="1.0" encoding="utf-8"?><!--
  ~ Aurora Store
  ~  Copyright (C) 2021, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~  Aurora Store is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Aurora Store is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_apps">

    <fragment
        android:id="@+id/navigation_apps"
        android:name="com.aurora.store.view.ui.apps.AppsContainerFragment"
        android:label="@string/title_apps"
        tools:layout="@layout/fragment_apps_games" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.aurora.store.view.ui.games.GamesContainerFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_apps_games" />

    <fragment
        android:id="@+id/navigation_updates"
        android:name="com.aurora.store.view.ui.updates.UpdatesFragment"
        android:label="@string/title_updates"
        tools:layout="@layout/fragment_updates" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.aurora.store.view.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/appsGamesFragment"
        android:name="com.aurora.store.view.ui.all.AppsGamesFragment"
        android:label="@string/title_apps_games"
        tools:layout="@layout/activity_generic_pager" />
    <fragment
        android:id="@+id/appSalesFragment"
        android:name="com.aurora.store.view.ui.sale.AppSalesFragment"
        android:label="@string/title_apps_sale"
        tools:layout="@layout/activity_generic_recycler" />
    <fragment
        android:id="@+id/spoofFragment"
        android:name="com.aurora.store.view.ui.spoof.SpoofFragment"
        android:label="@string/title_spoof_manager"
        tools:layout="@layout/activity_generic_pager" />
    <fragment
        android:id="@+id/blacklistFragment"
        android:name="com.aurora.store.view.ui.commons.BlacklistFragment"
        android:label="@string/title_blacklist_manager"
        tools:layout="@layout/activity_generic_recycler" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.aurora.store.view.ui.account.AccountFragment"
        android:label="@string/title_account_manager"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.aurora.store.view.ui.preferences.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/searchSuggestionFragment"
        android:name="com.aurora.store.view.ui.search.SearchSuggestionFragment"
        android:label="@string/title_search_suggestion"
        tools:layout="@layout/fragment_search_suggestion">
        <action
            android:id="@+id/action_searchSuggestionFragment_to_searchResultsFragment"
            app:destination="@id/searchResultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchResultsFragment"
        android:name="com.aurora.store.view.ui.search.SearchResultsFragment"
        android:label="@string/title_search_results"
        tools:layout="@layout/fragment_search_result">
        <argument
            android:name="query"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/downloadFragment"
        android:name="com.aurora.store.view.ui.downloads.DownloadFragment"
        android:label="@string/title_download_manager"
        tools:layout="@layout/fragment_download" />
    <fragment
        android:id="@+id/appDetailsFragment"
        android:name="com.aurora.store.view.ui.details.AppDetailsFragment"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="packageName"
            app:argType="string" />
        <deepLink
            app:action="android.intent.action.VIEW"
            app:uri="play.google.com/store/apps/details?id={packageName}" />
    </fragment>
    <action
        android:id="@+id/action_global_appDetailsFragment"
        app:destination="@id/appDetailsFragment" />
</navigation>
