<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Aurora Store
  ~  Copyright (C) 2021, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~  Aurora Store is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Aurora Store is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_blacklist_manager"
        android:icon="@drawable/ic_blacklist"
        android:title="@string/title_blacklist_manager" />

    <item
        android:id="@+id/menu_spoof_manager"
        android:icon="@drawable/ic_anonymous"
        android:title="@string/title_spoof_manager" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/title_about" />
</menu>
